[package]
name = "map-reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
glob = "0.3.1"
lazy_static = "1.4.0"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
